[tool.poetry]
name = "mattebox"
version = "0.0.0"
description = "Unofficial library for MatteBOX API."
authors = ["samedamci <samedamci@disroot.org>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.2"
requests = "^2.26.0"
m3u8 = "^0.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
black = "^21.8b0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
format = "{base}"

[tool.black]
target-version = ["py39"]
skip-magic-trailing-comma = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
